# warden-worker

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  wrangler.jsonc
.github/workflows/: push-cloudflare.yaml
scripts/: register-local-test-user.mjs
sql/: schema.sql  schema_full.sql
sql/migrations/: 20260213_add_webauthn.sql  20260220_split_webauthn_usage.sql
src/: auth.rs  entry.js  lib.rs  router.rs  utils.rs
src/core/: auth.rs  db.rs  error.rs  heavy_do.rs  jwt.rs  mod.rs  notifications.rs  two_factor.rs  webauthn.rs
src/handlers/: accounts.rs  ciphers.rs  config.rs  devices.rs  icons.rs  identity.rs  mod.rs  sends.rs  sync.rs  two_factor.rs  webauthn.rs
src/models/: cipher.rs  import.rs  send.rs  sync.rs  user.rs
static/web-vault.backup/app/: main.e6cdea516f91ca208db2.js
